trunk/Archive2/ee/8b75f8e772c4fc/output
main.cpp: In function 'main':
main.cpp:15:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (i = 0; i < sizeof(integer) / sizeof(integer[0]); ++i) {
                   ^
main.cpp:24:5: error: implicit declaration of function 'sourf' [-Wimplicit-function-declaration]
     printf("source: %s\n", sourf(source) / sizeof(source[0]); ++i) {
     ^
main.cpp:24:61: error: expected ')' before ';' token
     printf("source: %s\n", sourf(source) / sizeof(source[0]); ++i) {
                                                             ^
main.cpp:24:61: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'long unsigned int' [-Wformat=]
main.cpp:24:68: error: expected ';' before '{' token
     printf("source: %s\n", sourf(source) / sizeof(source[0]); ++i) {
                                                                    ^
main.cpp:29:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (i = 0; i < sizeof(integer) / sizeof(integer[0]); ++i) {
                   ^
